Solved all questions

--- a/DayWiseMaterial/Assignments/7th_Oct_OOPs_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/7th_Oct_OOPs_Assignment.ipynb
@@ -568,10 +568,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Class representing Student \n",
+    "class Student:\n",
+    "    def __init__(self, student_id, name, grades):\n",
+    "        # Attribute Student ID\n",
+    "        self.student_id = student_id\n",
+    "        # Attribute Name\n",
+    "        self.name = name\n",
+    "        # Attribute grades\n",
+    "        self.grades = grades\n",
+    "\n",
+    "    def calculate_average_grade(self):\n",
+    "        if self.grades:\n",
+    "            return sum(self.grades) / len(self.grades)\n",
+    "        else:\n",
+    "            return 0\n",
+    "\n",
+    "    def display_details(self):\n",
+    "        print('Student Details as below:')\n",
+    "        print(f\"Student ID: {self.student_id}\")\n",
+    "        print(f\"Name: {self.name}\")\n",
+    "        print(f\"Grades: {', '.join(map(str, self.grades))}\")\n",
+    "        print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student Details as below:\n",
+      "Student ID: 1\n",
+      "Name: Robin Pabbi\n",
+      "Grades: 95, 90, 88, 96, 89\n",
+      "\n",
+      "Student Details as below:\n",
+      "Student ID: 2\n",
+      "Name: Student 2\n",
+      "Grades: 45, 62, 57, 98, 95\n",
+      "\n",
+      "Average Marks for Robin Pabbi: 91.6\n",
+      "Average Marks for Student 2: 71.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create Student objects\n",
+    "student1 = Student(1, \"Robin Pabbi\", [95, 90, 88, 96, 89])\n",
+    "student2 = Student(2, \"Student 2\", [45, 62, 57, 98, 95])\n",
+    "\n",
+    "# Print Details of Students\n",
+    "student1.display_details()\n",
+    "student2.display_details()\n",
+    "\n",
+    "# Compute Average marks of students\n",
+    "average_grade_student1 = student1.calculate_average_grade()\n",
+    "average_grade_student2 = student2.calculate_average_grade()\n",
+    "\n",
+    "# Print Average marksprint(f\"Average Marks for {student1.name}: {average_grade_student1}\")\n",
+    "print(f\"Average Marks for {student1.name}: {average_grade_student1}\")\n",
+    "print(f\"Average Marks for {student2.name}: {average_grade_student2}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -582,10 +647,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Class representing Email\n",
+    "class Email:\n",
+    "    def __init__(self, sender, recipient, subject, message):\n",
+    "        self.sender = sender\n",
+    "        self.recipient = recipient\n",
+    "        self.subject = subject\n",
+    "        self.message = message\n",
+    "        self.is_sent = False\n",
+    "\n",
+    "    def send_email(self):\n",
+    "        if not self.is_sent:\n",
+    "            self.is_sent = True\n",
+    "            return f\"Email sent from {self.sender} to {self.recipient}.\"\n",
+    "        else:\n",
+    "            return \"This email has already been sent.\"\n",
+    "\n",
+    "    def display_details(self):\n",
+    "        print(f\"From: {self.sender}\")\n",
+    "        print(f\"To: {self.recipient}\")\n",
+    "        print(f\"Subject: {self.subject}\")\n",
+    "        print(f\"Message: {self.message}\")\n",
+    "        print(f\"Sent: {self.is_sent}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Email sent from sender@test.com to recipient@test.com.\n",
+      "\n",
+      "From: sender@test.com\n",
+      "To: recipient@test.com\n",
+      "Subject: Test Email\n",
+      "Message: This is test email 1.\n",
+      "Sent: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an Email\n",
+    "email1 = Email(\"sender@test.com\", \"recipient@test.com\", \"Test Email\", \"This is test email 1.\")\n",
+    "\n",
+    "print(email1.send_email())\n",
+    "print()\n",
+    "email1.display_details()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -596,16 +712,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Class representing Social Media Profile\n",
+    "class SocialMediaProfile:\n",
+    "    def __init__(self, username, f_name, l_name):\n",
+    "        # Attribute Username\n",
+    "        self.username = username\n",
+    "        # Attribute Posts (list of posts done by user)\n",
+    "        self.posts = []\n",
+    "        self.first_name = f_name\n",
+    "        self.last_name = l_name\n",
+    "\n",
+    "    def add_post(self, content):\n",
+    "        self.posts.append(content)\n",
+    "        print(f\"Post added successfully by {self.first_name} {self.last_name}.\")\n",
+    "\n",
+    "    def display_posts(self):\n",
+    "        if self.posts:\n",
+    "            print(f\"Post by {self.username} are as below:\")\n",
+    "            print(\"\\n\".join(self.posts))\n",
+    "        else:\n",
+    "            print(f\"{self.username} has no posts yet.\")\n",
+    "\n",
+    "    def search_posts_by_keyword(self, keyword):\n",
+    "        matching_posts = [post for post in self.posts if keyword.lower() in post.lower()]\n",
+    "        if matching_posts:\n",
+    "            return \"\\n\".join(matching_posts)\n",
+    "        else:\n",
+    "            return f\"No posts found containing the keyword '{keyword}'.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Post added successfully by Robin Pabbi.\n",
+      "Post added successfully by Robin Pabbi.\n",
+      "Post added successfully by Robin Pabbi.\n",
+      "Post by rpabbi are as below:\n",
+      "Watchin India vs Australia. #WorldCup2023\n",
+      "Lazy Sundays! #Lazy #Weekend\n",
+      "Learning ML, AI, DL, NLP, CV Stats @PWSkills. #Upgrading #Learning #ML #AI\n",
+      "Matching posts with keyword AI are as below:\n",
+      "Learning ML, AI, DL, NLP, CV Stats @PWSkills. #Upgrading #Learning #ML #AI\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a Social Media Profile for a user\n",
+    "profile = SocialMediaProfile(\"rpabbi\", \"Robin\", \"Pabbi\")\n",
+    "\n",
+    "# Adding posts to profile\n",
+    "profile.add_post(\"Watchin India vs Australia. #WorldCup2023\")\n",
+    "profile.add_post(\"Lazy Sundays! #Lazy #Weekend\")\n",
+    "profile.add_post(\"Learning ML, AI, DL, NLP, CV Stats @PWSkills. #Upgrading #Learning #ML #AI\")\n",
+    "\n",
+    "# Display all the posts\n",
+    "profile.display_posts()\n",
+    "\n",
+    "# Search posts and print result\n",
+    "keyword_to_search = \"AI\"\n",
+    "search_result = profile.search_posts_by_keyword(keyword_to_search)\n",
+    "print(f\"Matching posts with keyword {keyword_to_search} are as below:\")\n",
+    "print(search_result)\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Problem 10: ToDo List Create a class representing a ToDo list with attributes like tasks and due dates. Implement methods to add tasks, mark tasks as completed, and display pending tasks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Class representing Task\n",
+    "class Task:\n",
+    "    def __init__(self, id, task_details, due_date):\n",
+    "        self.id = id\n",
+    "        self.tast_details = task_details\n",
+    "        self.due_date = due_date\n",
+    "        self.is_completed = False\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Task ID: {self.id}, Details: {self.tast_details}, Due Date: {self.due_date}, Completed?: {self.is_completed}\"\n",
+    "    \n",
+    "    def mark_as_completed(self):\n",
+    "        self.is_completed = True\n",
+    "        print(f'Task with ID {self.id} is Marked as Completed!')\n",
+    "\n",
+    "# Class representing TO DO List\n",
+    "class ToDoList:\n",
+    "    def __init__(self):\n",
+    "        # Initialize to empty list by default\n",
+    "        self.tasks = []\n",
+    "\n",
+    "    def add_task(self, task: Task):\n",
+    "        self.tasks.append(task)\n",
+    "        print(f\"Task added to the ToDo list.\")\n",
+    "\n",
+    "    def mark_task_completed(self, task_id):\n",
+    "        for t in self.tasks:\n",
+    "            if t.id == task_id:\n",
+    "                t.mark_as_completed()\n",
+    "                return\n",
+    "        print(f\"Task with ID '{task_id}' not found in the ToDo list.\")\n",
+    "\n",
+    "    def display_pending_tasks(self):\n",
+    "        pending_tasks = [t for t in self.tasks if t.is_completed == False]\n",
+    "        if pending_tasks:\n",
+    "            print(\"Pending Tasks are as below:\")\n",
+    "            print(\"\\n\".join(map(str, pending_tasks)))\n",
+    "        else:\n",
+    "            print(\"No pending tasks in the ToDo list.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task added to the ToDo list.\n",
+      "Task added to the ToDo list.\n",
+      "Task added to the ToDo list.\n",
+      "Task added to the ToDo list.\n",
+      "\n",
+      "Pending Tasks are as below:\n",
+      "Task ID: 1, Details: Learn Python programming language., Due Date: 10/10/2023, Completed?: False\n",
+      "Task ID: 2, Details: Learn Stats., Due Date: 20/10/2023, Completed?: False\n",
+      "Task ID: 3, Details: Learn ML., Due Date: 15/11/2023, Completed?: False\n",
+      "Task ID: 4, Details: Learn DL., Due Date: 10/12/2023, Completed?: False\n",
+      "\n",
+      "Task with ID 1 is Marked as Completed!\n",
+      "\n",
+      "Pending Tasks are as below:\n",
+      "Task ID: 2, Details: Learn Stats., Due Date: 20/10/2023, Completed?: False\n",
+      "Task ID: 3, Details: Learn ML., Due Date: 15/11/2023, Completed?: False\n",
+      "Task ID: 4, Details: Learn DL., Due Date: 10/12/2023, Completed?: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a ToDo list\n",
+    "toDoList = ToDoList()\n",
+    "\n",
+    "# Create Tasks\n",
+    "task1 = Task(1, 'Learn Python programming language.', '10/10/2023')\n",
+    "task2 = Task(2, 'Learn Stats.', '20/10/2023')\n",
+    "task3 = Task(3, 'Learn ML.', '15/11/2023')\n",
+    "task4 = Task(4, 'Learn DL.', '10/12/2023')\n",
+    "\n",
+    "# Add Tasks to ToDoList\n",
+    "toDoList.add_task(task1)\n",
+    "toDoList.add_task(task2)\n",
+    "toDoList.add_task(task3)\n",
+    "toDoList.add_task(task4)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# Display pending tasks\n",
+    "toDoList.display_pending_tasks()\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# Mark task as completed\n",
+    "toDoList.mark_task_completed(1)\n",
+    "print()\n",
+    "\n",
+    "# Display pending tasks\n",
+    "toDoList.display_pending_tasks()"
    ]
   },
   {
