Solved couple of questions

--- a/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
@@ -307,7 +307,84 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Ans.\n",
+    "\n",
+    "> In Python, there are no explicit \"default constructors\" as such. Instead, Python provides a default constructor implicitly, which is the `__init__` method, and this gets called automatically when you create an instance of a class.\n",
+    "\n",
+    "The `__init__` method can be thought of as the default constructor because it serves the purpose of initializing the attributes of an object. If you don't define a custom `__init__` method in your class, Python provides a default one for you.\n",
+    "\n",
+    "*Example of class with out explicit `__init__` method*:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Calculator:\n",
+    "\n",
+    "    def add(self, a, b):\n",
+    "        return a + b\n",
+    "\n",
+    "    def sub(self, a, b):\n",
+    "        return a + b\n",
+    "\n",
+    "    def mul(self, a, b):\n",
+    "        return a + b\n",
+    "\n",
+    "# Creating an object/instance using default constructor (implicit __init__ from python)\n",
+    "calc = Calculator()\n",
+    "\n",
+    "calc.add(2,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Example of class with explicit `__init__` method but default constructor (no params)*:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: John Doe, Age: 30 Yrs\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self):\n",
+    "        self.name = \"John Doe\"\n",
+    "        self.age = 30\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f'Name: {self.name}, Age: {self.age} Yrs'\n",
+    "\n",
+    "# Creating instance using default constructor explicitly provided\"\n",
+    "person = Person()\n",
+    "\n",
+    "print(person)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -318,10 +395,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of rectangle is: 36\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python class called `Rectangle` with a constructor that initializes the `width` and `height` attributes\n",
+    "class Rectangle:\n",
+    "    def __init__(self, width, height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "\n",
+    "    # method to calculate the area of the rectangle\n",
+    "    def calculate_area(self):\n",
+    "        return self.width * self.height\n",
+    "    \n",
+    "# Create instance\n",
+    "rect = Rectangle(4, 9)\n",
+    "\n",
+    "# Compute area and print\n",
+    "area_of_rect = rect.calculate_area()\n",
+    "print(f'Area of rectangle is: {area_of_rect}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -333,7 +435,63 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Ans.\n",
+    "\n",
+    "> In Python, you can't have multiple constructors as in some other programming languages. However, you can achieve similar functionality by using default parameter values and optional arguments.\n",
+    "\n",
+    "Example of Rectangle class from question 9 as below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of rectangle1: 21\n",
+      "Area of rectangle2: 49\n",
+      "Area of rectangle3: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Rectangle:\n",
+    "    def __init__(self, width=None, height=None):\n",
+    "        if width is not None and height is not None:\n",
+    "            self.width = width\n",
+    "            self.height = height\n",
+    "        elif width is not None:\n",
+    "            self.width = width\n",
+    "            self.height = width\n",
+    "        elif height is not None:\n",
+    "            self.width = height\n",
+    "            self.height = height\n",
+    "        else:\n",
+    "            self.width = 0\n",
+    "            self.height = 0\n",
+    "\n",
+    "    def calculate_area(self):\n",
+    "        return self.width * self.height\n",
+    "\n",
+    "# Creating instances of the Rectangle class\n",
+    "rectangle1 = Rectangle(3, 7)\n",
+    "# Square of 7x7\n",
+    "rectangle2 = Rectangle(7)\n",
+    "rectangle3 = Rectangle()\n",
+    "\n",
+    "# Calculating the areas\n",
+    "area1 = rectangle1.calculate_area()\n",
+    "area2 = rectangle2.calculate_area()\n",
+    "area3 = rectangle3.calculate_area()\n",
+    "\n",
+    "print(f\"Area of rectangle1: {area1}\")\n",
+    "print(f\"Area of rectangle2: {area2}\")\n",
+    "print(f\"Area of rectangle3: {area3}\")"
+   ]
   },
   {
    "cell_type": "markdown",
