some more questions solved

--- a/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
@@ -1624,38 +1624,356 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In Python, **constructors** are inherited by default in child classes. This means that if a child class does not have its own `__init__` method, it will automatically inherit the `__init__` method of its parent class (superclass). If the child class does have its own `__init__` method, it will override the constructor of the parent class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Species: Canine\n",
+      "Breed: Golden Retriever\n",
+      "Cat species: Cat\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def __init__(self, species):\n",
+    "        self.species = species\n",
     "\n",
-    "### 11. Create a Python class called `Shape` with a method `area()` that calculates the area of a shape. Then, create child classes `Circle` and `Rectangle` that inherit from `Shape` and implement the `area()` method accordingly. Provide an example.\n",
-    "### 12. Explain the use of abstract base classes (ABCs) in Python and how they relate to inheritance. Provide an example using the `abc` module.\n",
-    "### 13. How can you prevent a child class from modifying certain attributes or methods inherited from a parent class in Python?\n",
-    "### 14. Create a Python class called `Employee` with attributes `name` and `salary`. Then, create a child class `Manager` that inherits from `Employee` and adds an attribute `department`. Provide an example.\n",
-    "### 15. Discuss the concept of method overloading in Python inheritance. How does it differ from method overriding?\n",
-    "### 16. Explain the purpose of the `__init__()` method in Python inheritance and how it is utilized in child classes.\n",
-    "### 17. Create a Python class called `Bird` with a method `fly()`. Then, create child classes `Eagle` and `Sparrow` that inherit from `Bird` and implement the `fly()` method differently. Provide an example of using these classes.\n",
-    "### 18. What is the \"diamond problem\" in multiple inheritance, and how does Python address it?\n",
-    "### 19. Discuss the concept of \"is-a\" and \"has-a\" relationships in inheritance, and provide examples of each.\n",
-    "### 20. Create a Python class hierarchy for a university system. Start with a base class `Person` and create child classes `Student` and `Professor`, each with their own attributes and methods. Provide an example of using these classes in a university context."
+    "    def speak(self):\n",
+    "        pass\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    # Override the constructor of super class\n",
+    "    def __init__(self, species, breed):\n",
+    "        super().__init__(species)\n",
+    "        self.breed = breed\n",
+    "\n",
+    "    def speak(self):\n",
+    "        print(\"Wuff!\")\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    # Here constructor from super class will be used\n",
+    "\n",
+    "    def speak(self):\n",
+    "        print(\"Meow!\")\n",
+    "\n",
+    "# Create Instances\n",
+    "dog = Dog(\"Canine\", \"Golden Retriever\")\n",
+    "cat = Cat(\"Cat\")\n",
+    "\n",
+    "print(f\"Species: {dog.species}\")\n",
+    "print(f\"Breed: {dog.breed}\")\n",
+    "\n",
+    "print(f\"Cat species: {cat.species}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "### 11. Create a Python class called `Shape` with a method `area()` that calculates the area of a shape. Then, create child classes `Circle` and `Rectangle` that inherit from `Shape` and implement the `area()` method accordingly. Provide an example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of the circle: 153.86\n",
+      "Area of the rectangle: 108\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Shape:\n",
+    "    def area(self):\n",
+    "        pass\n",
+    "\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "\n",
+    "    def area(self):\n",
+    "        return 3.14 * (self.radius ** 2)\n",
+    "\n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, length, width):\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.length * self.width\n",
+    "\n",
+    "# Create Instances\n",
+    "circle = Circle(7)\n",
+    "rectangle = Rectangle(9, 12)\n",
+    "\n",
+    "print(f\"Area of the circle: {circle.area()}\") \n",
+    "print(f\"Area of the rectangle: {rectangle.area()}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 12. Explain the use of abstract base classes (ABCs) in Python and how they relate to inheritance. Provide an example using the `abc` module."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "Ans.\n",
+    "\n",
+    "**Abstract Base Classes** (ABCs) in Python provide a way to define a common interface for a group of related classes. They allow you to specify a set of methods that must be implemented by subclasses. In essence, ABCs define a contract that subclasses must adhere to.\n",
+    "\n",
+    "The abc module in Python's standard library is used to work with abstract base classes. It provides the ABC class and the abstractmethod decorator, which are key components for creating and using abstract base classes.\n",
+    "\n",
+    "Example as below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can't instantiate abstract class Shape with abstract method area\n",
+      "Area of the circle: 153.86\n",
+      "Area of the rectangle: 96\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Shape(ABC):\n",
+    "    @abstractmethod\n",
+    "    def area(self):\n",
+    "        pass\n",
+    "\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "\n",
+    "    def area(self):\n",
+    "        return 3.14 * (self.radius ** 2)\n",
+    "\n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, length, width):\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.length * self.width\n",
+    "\n",
+    "# Attempting to create an instance of Shape (which is not allowed)\n",
+    "try:\n",
+    "    shape = Shape()\n",
+    "except TypeError as e:\n",
+    "    print(e)  # Output: Can't instantiate abstract class Shape with abstract method area\n",
+    "\n",
+    "circle = Circle(7)\n",
+    "rectangle = Rectangle(8, 12)\n",
+    "\n",
+    "print(f\"Area of the circle: {circle.area()}\")       # Output: Area of the circle: 78.5\n",
+    "print(f\"Area of the rectangle: {rectangle.area()}\") # Output: Area of the rectangle: 24\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 13. How can you prevent a child class from modifying certain attributes or methods inherited from a parent class in Python?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ans:\n",
+    "\n",
+    "> You can prevent attributes to be modified or methods to be inherited by derived class by making them private by using name mangling.\n",
+    "\n",
+    "Example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am private attribute\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Parent:\n",
+    "    def __init__(self):\n",
+    "        self.__private_attribute = \"I am private attribute\"\n",
+    "    \n",
+    "    def print_details(self):\n",
+    "        print(self.__private_attribute)\n",
+    "\n",
+    "class Child(Parent):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # this wont change the __private_attribute in class parent\n",
+    "        self.__private_attribute = \"This won't affect the parent\"\n",
+    "\n",
+    "\n",
+    "child = Child()\n",
+    "\n",
+    "child.print_details()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 14. Create a Python class called `Employee` with attributes `name` and `salary`. Then, create a child class `Manager` that inherits from `Employee` and adds an attribute `department`. Provide an example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employee: Mahesh, Salary: 50000\n",
+      "Manager: Robin, Salary: 90000, Department: IT\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    def __init__(self, name, salary):\n",
+    "        self.name = name\n",
+    "        self.salary = salary\n",
+    "\n",
+    "class Manager(Employee):\n",
+    "    def __init__(self, name, salary, department):\n",
+    "        super().__init__(name, salary)\n",
+    "        self.department = department\n",
+    "\n",
+    "# Example Usage:\n",
+    "\n",
+    "employee1 = Employee(\"Mahesh\", 50000)\n",
+    "manager1 = Manager(\"Robin\", 90000, \"IT\")\n",
+    "\n",
+    "print(f\"Employee: {employee1.name}, Salary: {employee1.salary}\")\n",
+    "print(f\"Manager: {manager1.name}, Salary: {manager1.salary}, Department: {manager1.department}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 15. Discuss the concept of method overloading in Python inheritance. How does it differ from method overriding?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ans:\n",
+    "\n",
+    "> The concept of method overloading in Python differs slightly from languages like Java or C++. In Python, you can't have multiple methods with the same name but different parameter lists in the same class.\n",
+    "\n",
+    "However, you can achieve similar functionality by using default arguments or variable-length argument lists.\n",
+    "\n",
+    "Example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n",
+      "125\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Calculator:\n",
+    "    def add(self, a, b, c=None):\n",
+    "        if c is not None:\n",
+    "            return a + b + c\n",
+    "        else:\n",
+    "            return a + b\n",
+    "\n",
+    "calculator = Calculator()\n",
+    "result1 = calculator.add(13, 27)\n",
+    "result2 = calculator.add(4, 54, 67)\n",
+    "\n",
+    "print(result1)\n",
+    "print(result2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 16. Explain the purpose of the `__init__()` method in Python inheritance and how it is utilized in child classes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 17. Create a Python class called `Bird` with a method `fly()`. Then, create child classes `Eagle` and `Sparrow` that inherit from `Bird` and implement the `fly()` method differently. Provide an example of using these classes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 18. What is the \"diamond problem\" in multiple inheritance, and how does Python address it?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 19. Discuss the concept of \"is-a\" and \"has-a\" relationships in inheritance, and provide examples of each."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 20. Create a Python class hierarchy for a university system. Start with a base class `Person` and create child classes `Student` and `Professor`, each with their own attributes and methods. Provide an example of using these classes in a university context."
+   ]
   },
   {
    "cell_type": "markdown",
